resolve refs, bodies, write output in parallel // fix class ordering affecting method inheritance // prefer Stream#toList // misc optimizations